Fix close icon not appearing on Safari
Tweak close button styles as well

--- a/css/toc.css
+++ b/css/toc.css
@@ -243,16 +243,19 @@ ul.u-toc > li > p > a {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 24px;
-    height: 24px;
-    background: transparent;
+    color: var(--theme-button-standard-fg);
     cursor: pointer;
-    font-size: 1.4rem;
-    stroke: var(--theme-muted);
-}
 
-.toc-drawer__close:hover {
-    color: var(--theme-accent);
+    &:hover {
+        background: var(--theme-button-standard-bg-hover);
+        color: var(--theme-button-standard-fg-hover);
+    }
+
+    > svg {
+        flex-basis: 24px;
+        width: 24px;
+        height: 24px;
+    }
 }
 
 .toc-drawer__nav .u-toc {
